--- a/templates/index.html
+++ b/templates/index.html
@@ -59,8 +59,8 @@
                 <img src="/static/css/img/super.png" alt="">
             </div>
             {% endif %}
-            <form action="add" method="post">
-                <button class="add_new_card" style="margin: 0 auto; display: flex; align-items: center; justify-content: center;cursor: pointer; background: #130D20">
+            <form class="form_for_add_card" action="add" method="post">
+                <button class="add_new_card " style="margin: 0 auto; display: flex; align-items: center; justify-content: center;cursor: pointer; background: #130D20">
                     <img src="/static/css/img/plus.png" alt="">
                     <p class="add">Добавить задачу</p>
                 </button>
@@ -102,7 +102,7 @@
             </div>
             {% endif %}
 
-            <form action="add" method="post">
+            <form class="form_for_add_card" action="add" method="post">
                 <button class="add_new_card" style="margin: 0 auto; display: flex; align-items: center; justify-content: center;cursor: pointer; background: #130D20">
                     <img src="/static/css/img/plus.png" alt="">
                     <p class="add">Добавить задачу</p>
@@ -145,7 +145,7 @@
             </div>
             {% endif %}
 
-            <form action="add" method="post">
+            <form class="form_for_add_card" action="add" method="post">
                 <button class="add_new_card" style="margin: 0 auto; display: flex; align-items: center; justify-content: center;cursor: pointer; background: #130D20">
                     <img src="/static/css/img/plus.png" alt="">
                     <p class="add">Добавить задачу</p>
