edit some files again

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -96,6 +96,10 @@ button {
   min-height: 750px;
 }
 
+.comment a {
+  color: white;
+}
+
 .substrate {
   padding: 10px 15px;
   background: #130D20;
