--- a/static/css/style.sass
+++ b/static/css/style.sass
@@ -70,6 +70,9 @@ button
     background-image: url("./img/background.png") 
     min-height: 750px
     
+.comment
+    a
+        color: white
 
 .substrate
     padding: 10px 15px
