--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,9 @@
 <style>
-    {{header_bloc}}
+    {
+        {
+            header_bloc
+        }
+    }
 </style>
 <div class="header">
     <img src="/static/css/img/logo.png" alt="" class="logo">
@@ -28,3 +32,4 @@
         </div>
     </div>
 </div>
+!
